[gd_scene load_steps=3 format=3 uid="uid://cblqeddvc1mon"]

[ext_resource type="Texture2D" uid="uid://dvbfdyrl8lg37" path="res://inventory9patch.png" id="1_bcd1y"]
[ext_resource type="Script" path="res://quest_creator.gd" id="1_i2wdf"]

[node name="QuestCreator" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i2wdf")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
show_behind_parent = true
light_mask = 0
z_index = -2
z_as_relative = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.5
offset_top = -111.0
offset_right = 120.5
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_bcd1y")
patch_margin_left = 22
patch_margin_top = 22
patch_margin_right = 23
patch_margin_bottom = 22
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="ItemLabel" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Item"

[node name="ItemOptionButton" type="OptionButton" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
item_count = 3
popup/item_0/text = "Stone"
popup/item_1/text = "Berry"
popup/item_1/id = 1
popup/item_2/text = "Acorn"
popup/item_2/id = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="QuantityLabel" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Quantity"

[node name="QuantityOptionButton" type="SpinBox" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
min_value = 1.0
value = 1.0

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10

[node name="CreateQuestButton" type="Button" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Create Quest"

[connection signal="pressed" from="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2/CreateQuestButton" to="." method="_on_create_quest_button_pressed"]
